--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="sdd-s2.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sdd-s3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
