tema 1 inceput + prima functie

--- a/sdd2024.vcxproj
+++ b/sdd2024.vcxproj
@@ -25,7 +25,10 @@
     <ClCompile Include="sdd-s2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="sdd-s3.c" />
+    <ClCompile Include="sdd-s3.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="sdd-tema1.c" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="masini.txt" />
