--- a/sdd2024.vcxproj
+++ b/sdd2024.vcxproj
@@ -31,9 +31,13 @@
     <ClCompile Include="sdd-tema1.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="sdd-tema2.c" />
+    <ClCompile Include="sdd-tema2.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="sdd-tema3.c" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="baterii.txt" />
     <Text Include="masini.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
