--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="sdd-tema3.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sdd-s4.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="masini.txt" />
