--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="sdd-s5.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sdd-s6.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="baterii.txt" />
