--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -49,5 +49,6 @@
   <ItemGroup>
     <Text Include="baterii.txt" />
     <Text Include="masini.txt" />
+    <Text Include="monezi.txt" />
   </ItemGroup>
 </Project>
