--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="sdd-s9.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sdd-s10.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="baterii.txt" />
