--- a/sdd2024.vcxproj.filters
+++ b/sdd2024.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="sdd-s10.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sdd-s11.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="baterii.txt" />
