--- a/sdd2024.vcxproj
+++ b/sdd2024.vcxproj
@@ -28,7 +28,10 @@
     <ClCompile Include="sdd-s10.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="sdd-s11.c" />
+    <ClCompile Include="sdd-s11.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="sdd-s12.c" />
     <ClCompile Include="sdd-s2.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
